2004-02-04 Benoit Regrain
     * FIX : even length for some strings when writting the dicom dir
     * FIX : sort the images in the dicom dir
     * FIX : Bug fix for python use of dicom dir
     * Add a python demo

2004-02-04 Jean-Pierre Roux
     * FIX : Final solution (?) for icone embedded images
     * FIX : dicomVR.dic Overlay group is not *only* 6000, but 60xxx
             (see http://medical.nema.org/dicom/2003/03_06PU.PDF)
	     add groups 6002, 6004, 6006, to allow 'clean' parsing of
	     gdcmData/gdcm-MR-SIEMENS-16.acr1
     * ENH  add gdcmData/checkWriteExplicit.sh gdcmData/checkWriteImplicit.sh
            to make full checking easier
	     
2004-02-04 Benoit Regrain
     * FIX : WriteEntries : coding style & logic in parameters
     * FIX : Set the elements to create the DicomDir in a dictionary file

2004-02-03 Benoit Regrain
     * gdcmDirList : to parse a hard drive directory in recursive (or not)
     * gdcmDicomDir : add the load of directory
     * Bug fix and print add-on

2004-02-03 Jean-Pierre Roux
     * ENH gdcmParser : allows "DICM" files, with NO group '0002'
     * FIX handling 'non string elements' unsecure area (LUT, overlays, etc)
     * FIX Dicts/dicomV3.dic : Add a few missing 'group length' Elements 
     * FIX gdcmParser.cxx : 'group length' elements are now considered 
           as integers, even for shadow groups, when file is Implicit VR
        
2004-02-02 Jean-Pierre Roux
     * FIX : gdcmWrite : equal_range() for multimap doesn't return a 'second' 
	          iterator on last
             of the last synonym :-(
     * FIX : gdcmWrite::WriteBase : method stops if Pixels not yet Read (except 
	          for DICOMDIR ;-)
     * ENH gdcmData/checkWrite.sh :modif for full check of Explicit VR writting
     * FIX taking into account the possible 7fe0,0010 multiplicity        
     * FIX add GRPixel,NumPixel,countGrPixel (gdcmParser protected members)
           to allow removal of references to 7fe0,0010, to deal with