@@ -4,17 +4,32 @@
 
 //-----------------------------------------------------------------------------
 // Constructor / Destructor
+/**
+ * \ingroup gdcmImage
+ * \brief   
+ * @param   begin iterator of begin for the object
+ * @param   end   iterator of end for the object
+ */
 gdcmImage::gdcmImage(ListTag::iterator begin,ListTag::iterator end):
    gdcmObject(begin,end)
 {
 }
 
+/**
+ * \ingroup gdcmImage
+ * \brief   Canonical destructor.
+ */
 gdcmImage::~gdcmImage() 
 {
 }
 
 //-----------------------------------------------------------------------------
 // Print
+/**
+ * \ingroup gdcmImage
+ * \brief   Prints the Object
+ * @return
+ */ 
 void gdcmImage::Print(std::ostream &os)
 {
    os<<"IMAGE : ";
