@@ -5,6 +5,12 @@
 
 //-----------------------------------------------------------------------------
 // Constructor / Destructor
+/**
+ * \ingroup gdcmObject
+ * \brief   
+ * @param   begin iterator of begin for the object
+ * @param   end   iterator of end for the object
+ */
 gdcmObject::gdcmObject(ListTag::iterator begin,ListTag::iterator end) 
 {
    beginObj=begin;
@@ -14,12 +20,21 @@ gdcmObject::gdcmObject(ListTag::iterator begin,ListTag::iterator end)
       dbg.Verbose(0, "gdcmObject::gdcmObject empty list");
 }
 
+/**
+ * \ingroup gdcmObject
+ * \brief   Canonical destructor.
+ */
 gdcmObject::~gdcmObject(void) 
 {
 }
 
 //-----------------------------------------------------------------------------
 // Print
+/**
+ * \ingroup gdcmObject
+ * \brief   Prints the Object
+ * @return
+ */ 
 void gdcmObject::Print(std::ostream &os)
 {
    if(printLevel>=0)
@@ -34,6 +49,11 @@ void gdcmObject::Print(std::ostream &os)
 
 //-----------------------------------------------------------------------------
 // Public
+/**
+ * \ingroup gdcmObject
+ * \brief   Get an entry by number
+ * @return
+ */ 
 std::string gdcmObject::GetEntryByNumber(guint16 group, guint16 element) 
 {
    for(ListTag::iterator i=beginObj;i!=endObj;++i)
@@ -45,7 +65,12 @@ std::string gdcmObject::GetEntryByNumber(guint16 group, guint16 element)
    return GDCM_UNFOUND;
 }
 
-
+/**
+ * \ingroup gdcmObject
+ * \brief   Get an entry by name
+ * @param   name name of the searched element.
+ * @return
+ */ 
 std::string gdcmObject::GetEntryByName(TagName name) 
 {
    gdcmDict *PubDict=gdcmGlobal::GetDicts()->GetDefaultPubDict();
@@ -54,6 +79,40 @@ std::string gdcmObject::GetEntryByName(TagName name)
    if( dictEntry == NULL)
       return GDCM_UNFOUND;
    return GetEntryByNumber(dictEntry->GetGroup(),dictEntry->GetElement()); 
+}
+
+/**
+ * \ingroup gdcmObject
+ * \brief   Get all entries in a hash table
+ * @return
+ */ 
+TagHeaderEntryHT gdcmObject::GetEntry(void)
+{
+   TagHeaderEntryHT HT;
+
+   for(ListTag::iterator it=beginObj;it!=endObj;++it)
+   {
+      HT.insert( PairHT( (*it)->GetKey(),(*it)) );
+   }
+
+   return(HT);
+}
+
+/**
+ * \ingroup gdcmObject
+ * \brief   Get all entries in a list
+ * @return
+ */ 
+ListTag gdcmObject::GetListEntry(void)
+{
+   ListTag list;
+
+   for(ListTag::iterator it=beginObj;it!=endObj;++it)
+   {
+      list.push_back(*it);
+   }
+
+   return(list);
 }
 
 //-----------------------------------------------------------------------------
