@@ -26,6 +26,9 @@ public:
    std::string GetEntryByNumber(guint16 group, guint16 element);
    std::string GetEntryByName(TagName name);
 
+   TagHeaderEntryHT GetEntry(void);
+   ListTag GetListEntry(void);
+
 protected:
    ListTag::iterator beginObj;
    ListTag::iterator endObj;
