@@ -4,11 +4,21 @@
 
 //-----------------------------------------------------------------------------
 // Constructor / Destructor
+/**
+ * \ingroup gdcmPatient
+ * \brief   
+ * @param   begin iterator of begin for the object
+ * @param   end   iterator of end for the object
+ */
 gdcmPatient::gdcmPatient(ListTag::iterator begin,ListTag::iterator end):
    gdcmObject(begin,end)
 {
 }
 
+/**
+ * \ingroup gdcmPatient
+ * \brief   Canonical destructor.
+ */
 gdcmPatient::~gdcmPatient() 
 {
    for(ListStudy::iterator cc = studies.begin();cc != studies.end();++cc)
@@ -19,6 +29,11 @@ gdcmPatient::~gdcmPatient()
 
 //-----------------------------------------------------------------------------
 // Print
+/**
+ * \ingroup gdcmPatient
+ * \brief   Prints the Object
+ * @return
+ */ 
 void gdcmPatient::Print(std::ostream &os)
 {
    os<<"PATIENT"<<std::endl;
