@@ -4,11 +4,21 @@
 
 //-----------------------------------------------------------------------------
 // Constructor / Destructor
+/**
+ * \ingroup gdcmSerie
+ * \brief   
+ * @param   begin iterator of begin for the object
+ * @param   end   iterator of end for the object
+ */
 gdcmSerie::gdcmSerie(ListTag::iterator begin,ListTag::iterator end):
    gdcmObject(begin,end)
 {
 }
 
+/**
+ * \ingroup gdcmSerie
+ * \brief   Canonical destructor.
+ */
 gdcmSerie::~gdcmSerie() 
 {
    for(ListImage::iterator cc = images.begin();cc != images.end();++cc)
@@ -19,6 +29,11 @@ gdcmSerie::~gdcmSerie()
 
 //-----------------------------------------------------------------------------
 // Print
+/**
+ * \ingroup gdcmSerie
+ * \brief   Prints the Object
+ * @return
+ */ 
 void gdcmSerie::Print(std::ostream &os)
 {
    os<<"SERIE"<<std::endl;
